[package]
name = "cbor-tag-index"
version = "0.2.0"
authors = ["Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
description = "Tag index"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
vec-collections = "0.3.5"
fnv = "1.0.7"
libipld = "0.12.0"
libipld-cbor = "0.12.0"

[dev-dependencies]
hex = "0.4.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.64"
quickcheck = "1.0.3"
rand = "0.8.3"
rand_chacha = "0.3.0"
criterion = "0.3.4"
zstd = "0.8.1"

[[bench]]
name = "misc"
harness = false

[profile.release]
debug = true
